--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 											</div>
 
 										</li>
-										
+
 										<li class="open">
 											<div class="date">Student Volunteer'20</div>
 											<div class="circle"></div>
@@ -313,7 +313,7 @@
 												<div class="text row">
 													<div class="col-md-2">
 														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/icsa-20202.png">
+															src="img/personal/icsa-2020.png">
 													</div>
 
 													<div class="col-md-10">I received a grand to be part
@@ -403,18 +403,26 @@
 											</div>
 
 										</li>
+
 										<li class="open">
 											<div class="date">ELA-ES 2016</div>
 											<div class="circle"></div>
 											<div class="data">
 												<div class="subject">Best Paper Award</div>
 												<div class="text row">
+													<div class="col-md-2">
+														<img alt="image" class="thumbnail img-responsive"
+															src="img/personal/elaes-2016.jpg">
+													</div>
+
 													<div class="col-md-10">Award received in Natal,
 														Brazil during the 3rd Latin-American School on Software
 														Engineering (ELA-ES) in 2016.</div>
 												</div>
 											</div>
+
 										</li>
+
 
 
 										<li class="open">
