--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 											</div>
 											<div class="description">
 												<p class="what">PhD in Informatics, PUC-Rio</p>
+												<p class="where">Grade Point Average (GPA): 9.7/10.</p>
 												<p class="where">
 													Advisor: <a href="http://www-di.inf.puc-rio.br/~afgarcia//"
 														target="_new">Alessandro Garcia</a>
