--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -136,7 +135,7 @@
 									<h3 class="title">Short Bio</h3>
 									<p>
 
-										Anderson Uchôa is a second-year PhD student the <a
+										Anderson Uchôa is a third-year PhD student the <a
 											href="http://www.inf.puc-rio.br" target="_new">Department
 											of Informatics</a> at Pontifical Catholic University of Rio de
 										Janeiro <a href="https://www.puc-rio.br" target="_new">
@@ -147,8 +146,8 @@
 									</p>
 
 									<p>
-										He holds a Master's in Informatics from PUC-Rio (2019).
-										Anderson holds a Bachelor's degree in software engineering
+										He holds a Master's in Software Engineering from PUC-Rio (2019).
+										Anderson holds a Bachelor's degree in Software Engineering
 										from the Federal University of Ceará <a
 											href="http://www.ufc.br/" target="_new">(UFC)</a>, Brazil, in
 										cooperation with Sapienza University of Rome <a
@@ -160,11 +159,9 @@
 										engineering, information systems for healthcare, and data
 										science. He also works in industrial projects at PUC-Rio.
 										Relevant venues and journals have accepted his work for
-										publication, such as the International Conference on Software
-										Reuse (ICSR), International Conference on Software Engineering
-										(ICSE), and Information Systems (IS). Anderson collaborates
-										with various researchers in Brazil (more recently, UFAL, UFPE,
-										and UFC) and UK (Newcastle University). He has received the
+										publication, such as the International Conference on Software Maintenance and Evolution (ICSME), International Conference on Software Engineering (ICSE), and International Conference on Mining Software Repositories (MSR). Anderson collaborates
+										with various researchers in Brazil (more recently, UFAL, UFPE, UFPR,
+										and UFC) and UK (Newcastle University and University College London). He has received the
 										best paper award from the 3rd Latin-American School on
 										Software Engineering (ELA-ES 2016).</p>
 
@@ -214,13 +211,14 @@
 												<span>Present</span> <span>2022</span>
 											</div>
 											<div class="content">
-												<h4>PhD Student in Informatics</h4>
+												<h4>PhD Student in Software Engineering</h4>
 												<p>
 													<em>Pontifical Catholic University of Rio de Janeiro
 														(PUC-Rio)</em>, Department of Informatics
 												</p>
 											</div>
 										</li>
+									</ul>
 								</div>
 								<div class="col-md-5">
 									<div class="title text-center">
@@ -233,7 +231,7 @@
 												<span class="degree">PhD</span> <span class="year">Present</span>
 											</div>
 											<div class="description">
-												<p class="what">PhD in Informatics, PUC-Rio</p>
+												<p class="what">PhD in Software Engineering, PUC-Rio</p>
 												<p class="where">Grade Point Average (GPA): 9.7/10.</p>
 												<p class="where">
 													Advisor: <a href="http://www-di.inf.puc-rio.br/~afgarcia//"
@@ -247,7 +245,7 @@
 												<span class="degree">MSc</span> <span class="year">2019</span>
 											</div>
 											<div class="description">
-												<p class="what">MSc in Informatics, PUC-Rio</p>
+												<p class="what">MSc in Software Engineering, PUC-Rio</p>
 												<p class="where">Grade Point Average (GPA): 9/10.</p>
 												<p class="where">
 													Advisor: <a href="http://www-di.inf.puc-rio.br/~afgarcia//"
