--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	gtag('js', new Date());
 
 	gtag('config', 'UA-103030276-2');
+
 </script>
 
 
@@ -42,8 +43,7 @@
 <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
 <script type="text/javascript" src="js/TweenMax.min.js"></script>
 <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
-<script type="text/javascript"
-	src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
+<script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
 
 <script type="text/javascript" src="js/modernizr.custom.63321.js"></script>
 <script type="text/javascript" src="js/jquery.dropdownit.js"></script>
@@ -76,11 +76,19 @@
 					<div id="profile" class="clearfix">
 						<a href="http://www.inf.puc-rio.br/" target="_new"><img
 							alt="image" width="230" src="img/logo_di.png"></a>
+						<br>
+<!--						<br>-->
+<!--						<a href="https://dcc.ufrj.br/" target="_new"><img-->
+<!--								alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>-->
+<!--						<br>-->
+<!--						<br>-->
 						<div class="portrate hidden-xs"></div>
 						<div class="title">
 							<h2>Anderson Uchôa</h2>
-							<h3>Pontifical Catholic University of Rio de Janeiro
-								(PUC-Rio)</h3>
+							<h3>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</h3>
+
+<!--							<h3>PUC-Rio & UFRJ </h3>-->
+
 						</div>
 					</div>
 					<ul id="navigation">
@@ -89,15 +97,26 @@
 								<div class="text">About Me</div>
 						</a></li>
 
-						<li><a href="research.html">
-								<div class="icon icon-book"></div>
-								<div class="text">Research Projects</div>
+						<li><a href="publication.html">
+							<div class="icon icon-edit"></div>
+							<div class="text">Publications</div>
 						</a></li>
 
-						<li><a href="publication.html">
-								<div class="icon icon-edit"></div>
-								<div class="text">Publications</div>
+						<li><a href="awards.html">
+							<div class="icon icon-star"></div>
+							<div class="text">Awards</div>
 						</a></li>
+
+						<li><a href="research.html">
+								<div class="icon icon-book"></div>
+								<div class="text">Research Experience</div>
+						</a></li>
+
+<!--						<li><a href="teaching.html">-->
+<!--							<div class="icon icon-time"></div>-->
+<!--							<div class="text">Teaching</div>-->
+<!--						</a></li>-->
+
 
 						<li><a href="http://lattes.cnpq.br/3740664626762609"
 							target="_new">
@@ -123,10 +142,27 @@
 
 		<div id="main">
 
-			<div id="biography" class="page home" data-pos="home">
+			<div id="new" class="page home" data-pos="home">
 				<div class="pageheader">
 					<div class="headercontent">
 						<div class="section-container">
+
+							<div class="row">
+
+								<div class="clearfix visible-sm visible-xs"></div>
+								<div class="col-md-12">
+									<h3 class="title">Recent News</h3>
+									<p>
+
+									<div class="alert alert-danger" role="alert">
+									I'll join the Department of Computer Science (DCC) at the Federal University of Rio de Janeiro (UFRJ) as Substitute Professor in 2021.</div>
+
+									<div class="alert alert-danger" role="alert">
+										I'll present my PhD Thesis Proposal entitled Unveiling Multiple Facets of Design Degradation in Modern Code Review at the 29th ESEC/FSE 2021</div>
+								</div>
+
+							</div>
+
 
 							<div class="row">
 
@@ -137,9 +173,9 @@
 
 										Anderson Uchôa is a third-year PhD student the <a
 											href="http://www.inf.puc-rio.br" target="_new">Department
-											of Informatics</a> at Pontifical Catholic University of Rio de
+										of Informatics</a> at Pontifical Catholic University of Rio de
 										Janeiro <a href="https://www.puc-rio.br" target="_new">
-											(PUC-Rio)</a>. The postgraduate program of the Department of
+										(PUC-Rio)</a>. The postgraduate program of the Department of
 										Informatics is evaluated by the Brazilian Federal Agency for
 										Postgraduate Education (CAPES) as being of international
 										excellence (maximum score, 7).
@@ -152,7 +188,7 @@
 											href="http://www.ufc.br/" target="_new">(UFC)</a>, Brazil, in
 										cooperation with Sapienza University of Rome <a
 											href="https://www.di.uniroma1.it/" target="_new"> (La
-											Sapienza)</a>, Italy (2016).
+										Sapienza)</a>, Italy (2016).
 									</p>
 
 									<p>He has worked for research projects in software
@@ -169,14 +205,63 @@
 
 										He is a research scholar in software engineering for <a
 											href="https://opus.les.inf.puc-rio.br/wordpress/">OPUS
-											Research Group </a> at PUC-Rio since 2017 under the supervision
+										Research Group </a> at PUC-Rio since 2017 under the supervision
 										of Prof. <a href="https://www-di.inf.puc-rio.br/~afgarcia//"
-											target="_new">Dr. Alessandro Garcia</a> which is part of the
+													target="_new">Dr. Alessandro Garcia</a> which is part of the
 										Software Engineering Laboratory of PUC-Rio. His main research
 										interests are code review, software reuse, software evolution,
 										software maintenance, and human factors. His researches are
 										available in <a href="publication.html">publications</a>.
 									</p>
+
+									<!--									<h3 class="title">Short Bio</h3>-->
+<!--									<p>-->
+
+<!--										Anderson Uchôa is a Substitute Professor of the <a href="https://dcc.ufrj.br/" target="_new">Department of Computer Science</a>  at Federal University of Rio de Janeiro <a href="https://ufrj.br/en/" target="_new">(UFRJ)</a> . Anderson is also a third-year PhD student in Software Engineering of the <a-->
+<!--											href="http://www.inf.puc-rio.br" target="_new">Department-->
+<!--											of Informatics</a> at Pontifical Catholic University of Rio de-->
+<!--										Janeiro <a href="https://www.puc-rio.br" target="_new">-->
+<!--											(PUC-Rio)</a>. He holds a Master's in Software Engineering from PUC-Rio (2019).-->
+<!--										Anderson holds a Bachelor's degree in Software Engineering-->
+<!--										from the Federal University of Ceará <a-->
+<!--											href="http://www.ufc.br/" target="_new">(UFC)</a>, Brazil, in-->
+<!--										cooperation with Sapienza University of Rome <a-->
+<!--											href="https://www.di.uniroma1.it/" target="_new"> (La-->
+<!--										Sapienza)</a>, Italy (2016).-->
+<!--									</p>-->
+
+<!--&lt;!&ndash;									<p>&ndash;&gt;-->
+<!--&lt;!&ndash;										He holds a Master's in Software Engineering from PUC-Rio (2019).&ndash;&gt;-->
+<!--&lt;!&ndash;										Anderson holds a Bachelor's degree in Software Engineering&ndash;&gt;-->
+<!--&lt;!&ndash;										from the Federal University of Ceará <a&ndash;&gt;-->
+<!--&lt;!&ndash;											href="http://www.ufc.br/" target="_new">(UFC)</a>, Brazil, in&ndash;&gt;-->
+<!--&lt;!&ndash;										cooperation with Sapienza University of Rome <a&ndash;&gt;-->
+<!--&lt;!&ndash;											href="https://www.di.uniroma1.it/" target="_new"> (La&ndash;&gt;-->
+<!--&lt;!&ndash;											Sapienza)</a>, Italy (2016).&ndash;&gt;-->
+<!--&lt;!&ndash;									</p>&ndash;&gt;-->
+
+<!--									<p>He has worked for research projects in software-->
+<!--										engineering, information systems for healthcare, and data-->
+<!--										science. He also works in industrial projects at PUC-Rio.-->
+<!--										Relevant venues and journals have accepted his work for-->
+<!--										publication, such as the International Conference on Software Maintenance and Evolution (ICSME), International Conference on Software Engineering (ICSE), and International Conference on Mining Software Repositories (MSR). Anderson collaborates-->
+<!--										with various researchers in Brazil (more recently, UFAL, UFPE, UFPR,-->
+<!--										and UFC) and UK (Newcastle University and University College London). He has received the-->
+<!--										best paper award from the 3rd Latin-American School on-->
+<!--										Software Engineering (ELA-ES 2016).</p>-->
+
+<!--									<p>-->
+
+<!--										He is a research scholar in software engineering for <a-->
+<!--											href="https://opus.les.inf.puc-rio.br/wordpress/">OPUS-->
+<!--											Research Group </a> at PUC-Rio since 2017 under the supervision-->
+<!--										of Prof. <a href="https://www-di.inf.puc-rio.br/~afgarcia//"-->
+<!--											target="_new">Dr. Alessandro Garcia</a> which is part of the-->
+<!--										Software Engineering Laboratory of PUC-Rio. His main research-->
+<!--										interests are code review, software reuse, software evolution,-->
+<!--										software maintenance, and human factors. His researches are-->
+<!--										available in <a href="publication.html">publications</a>.-->
+<!--									</p>-->
 
 
 									<p>Feel free to contact me. Specially if you are a
@@ -191,10 +276,10 @@
 									<p>Spoken Languages: English (intermediary); Italian
 										(fluent); Portuguese (mother language).</p>
 								</div>
-
 							</div>
 						</div>
 					</div>
+
 				</div>
 
 				<div class="pagecontents">
@@ -219,10 +304,26 @@
 											</div>
 										</li>
 									</ul>
+<!--									<ul class="ul-dates">-->
+<!--										<li>-->
+<!--											<div class="dates">-->
+<!--												<span>Present</span> <span>2022</span>-->
+<!--											</div>-->
+<!--											<div class="content">-->
+<!--												<h4>Substitute Professor in Computer Science</h4>-->
+<!--												<p>-->
+<!--													<em>Federal University of Rio de Janeiro-->
+<!--														(UFRJ)</em>, Department of Computer Science-->
+<!--												</p>-->
+<!--											</div>-->
+<!--										</li>-->
+<!--									</ul>-->
+
+
 								</div>
 								<div class="col-md-5">
 									<div class="title text-center">
-										<h3>Academic Degrees</h3>
+										<h3>Academic Education</h3>
 									</div>
 									<ul class="ul-card">
 
@@ -275,182 +376,11 @@
 									</ul>
 								</div>
 
-								<div class="col-md-10 col-md-offset-1">
-									<div class="title text-center">
-										<h3>
-											<br>Honors, Awards and Grants (Selection)
-										</h3>
-										<h4>Click on each award title to see a summary.</h4>
-									</div>
-									<ul class="timeline">
-
-										<li class="open">
-											<div class="date">Student Volunteer'20</div>
-											<div class="circle"></div>
-											<div class="data">
-												<div class="subject">Student Volunteer for ICSE 2020</div>
-												<div class="text row">
-													<div class="col-md-2">
-														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/icse-2020.png">
-													</div>
-
-													<div class="col-md-10">I received a grand to be part
-														of the student volunteers who have been selected to
-														support the International Conference on Software
-														Engineering (ICSE 2020) - Virtual Format.</div>
-												</div>
-											</div>
-
-										</li>
-
-										<li class="open">
-											<div class="date">Student Volunteer'20</div>
-											<div class="circle"></div>
-											<div class="data">
-												<div class="subject">Student Volunteer for ICSA 2020</div>
-												<div class="text row">
-													<div class="col-md-2">
-														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/icsa-2020.png">
-													</div>
-
-													<div class="col-md-10">I received a grand to be part
-														of the student volunteers who have been selected to
-														support the premier International Conference on Software
-														Architecture (ICSA 2020) at Salvador, Bahia, Brazil.</div>
-												</div>
-											</div>
-
-										</li>
-
-										<li class="open">
-											<div class="date">Award 2019</div>
-											<div class="circle"></div>
-											<div class="data">
-												<div class="subject">SIGSOFT CAPS Travel Grant Award</div>
-												<div class="text row">
-													<div class="col-md-2">
-														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/acm-sigsoft.jpg">
-													</div>
-
-													<div class="col-md-10">I received a SIGSOFT CAPS
-														Travel Grand Award from Association for Computing
-														Machinery (ACM) to attend ICSE 2019.</div>
-												</div>
-											</div>
-
-										</li>
-
-										<li class="open">
-											<div class="date">Scholarship Grant 2019</div>
-											<div class="circle"></div>
-											<div class="data">
-												<div class="subject">CNPq's Scholarship Grant</div>
-												<div class="text row">
-													<div class="col-md-2">
-														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/cnpq.png">
-													</div>
-
-													<div class="col-md-10">I received a scholarship from
-														National Council for Scientific and Technological
-														Development (CNPq) to support my PhD research.</div>
-												</div>
-											</div>
-
-										</li>
-
-
-										<li class="open">
-											<div class="date">Student Volunteer'18</div>
-											<div class="circle"></div>
-											<div class="data">
-												<div class="subject">Student Volunteer for ICSE 2018</div>
-												<div class="text row">
-													<div class="col-md-2">
-														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/icse-2018.png">
-													</div>
-
-													<div class="col-md-10">I received a grand to be part
-														of the student volunteers who have been selected to
-														support the International Conference on Software
-														Engineering (ICSE 2018) at Gothenburg, Sweden.</div>
-												</div>
-											</div>
-
-										</li>
-
-
-										<li class="open">
-											<div class="date">Scholarship Grant 2017</div>
-											<div class="circle"></div>
-											<div class="data">
-												<div class="subject">CAPES's Scholarship Grant</div>
-												<div class="text row">
-													<div class="col-md-2">
-														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/capes.jpg">
-													</div>
-
-													<div class="col-md-10">I received a scholarship from
-														Brazilian Federal Agency for Postgraduate Education
-														(CAPES) to support my M.Sc. research.</div>
-												</div>
-											</div>
-
-										</li>
-
-										<li class="open">
-											<div class="date">ELA-ES 2016</div>
-											<div class="circle"></div>
-											<div class="data">
-												<div class="subject">Best Paper Award</div>
-												<div class="text row">
-													<div class="col-md-2">
-														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/elaes-2016.jpg">
-													</div>
-
-													<div class="col-md-10">Award received in Natal,
-														Brazil during the 3rd Latin-American School on Software
-														Engineering (ELA-ES) in 2016.</div>
-												</div>
-											</div>
-
-										</li>
-
-
-
-										<li class="open">
-											<div class="date">Scholarship Grant 2014</div>
-											<div class="circle"></div>
-											<div class="data">
-												<div class="subject">CAPES's Scholarship Grant</div>
-												<div class="text row">
-													<div class="col-md-2">
-														<img alt="image" class="thumbnail img-responsive"
-															src="img/personal/capes.jpg">
-													</div>
-
-													<div class="col-md-10">I received a scholarship from
-														Brazilian Federal Agency for Postgraduate Education
-														(CAPES) to support my B.Sc academic exchange.</div>
-												</div>
-											</div>
-										</li>
-									</ul>
-								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-
-
 
 		</div>
 	</div>
