--- a/publication.html
+++ b/publication.html
@@ -52,54 +52,75 @@
 	<div id="wrapper">
 		<a href="#sidebar" class="mobilemenu"><i class="icon-reorder"></i></a>
 
-		<div id="sidebar">
-			<div id="main-nav">
-				<div id="nav-container">
-					<div id="profile" class="clearfix">
-						<a href="https://www.inf.puc-rio.br/" target="_new"><img
-							alt="image" width="230" src="img/logo_di.png"></a>
-						<div class="portrate hidden-xs"></div>
-						<div class="title">
-							<h2>Anderson Uchôa</h2>
-							<h3>Pontifical Catholic University of Rio de Janeiro
-								(PUC-Rio)</h3>
-						</div>
-					</div>
-					<ul id="navigation">
-						<li><a href="index.html">
-								<div class="icon icon-user"></div>
-								<div class="text">About Me</div>
-						</a></li>
+        <div id="sidebar">
+            <div id="main-nav">
+                <div id="nav-container">
+                    <div id="profile" class="clearfix">
+                        <a href="http://www.inf.puc-rio.br/" target="_new"><img
+                                alt="image" width="230" src="img/logo_di.png"></a>
+                        <br>
+                        <!--						<br>-->
+                        <!--						<a href="https://dcc.ufrj.br/" target="_new"><img-->
+                        <!--								alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>-->
+                        <!--						<br>-->
+                        <!--						<br>-->
+                        <div class="portrate hidden-xs"></div>
+                        <div class="title">
+                            <h2>Anderson Uchôa</h2>
+                            <h3>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</h3>
 
-						<li><a href="research.html">
-								<div class="icon icon-book"></div>
-								<div class="text">Research Projects</div>
-						</a></li>
+                            <!--							<h3>PUC-Rio & UFRJ </h3>-->
 
-						<li class="currentmenu"><a href="publication.html">
-								<div class="icon icon-edit"></div>
-								<div class="text">Publications</div>
-						</a></li>
+                        </div>
+                    </div>
+                    <ul id="navigation">
+                        <li class="currentmenu"><a href="index.html">
+                            <div class="icon icon-user"></div>
+                            <div class="text">About Me</div>
+                        </a></li>
+
+                        <li><a href="publication.html">
+                            <div class="icon icon-edit"></div>
+                            <div class="text">Publications</div>
+                        </a></li>
+
+                        <li><a href="awards.html">
+                            <div class="icon icon-star"></div>
+                            <div class="text">Awards</div>
+                        </a></li>
+
+                        <li><a href="research.html">
+                            <div class="icon icon-book"></div>
+                            <div class="text">Research Experience</div>
+                        </a></li>
+
+                        <!--						<li><a href="teaching.html">-->
+                        <!--							<div class="icon icon-time"></div>-->
+                        <!--							<div class="text">Teaching</div>-->
+                        <!--						</a></li>-->
 
 
-						<li><a href="http://lattes.cnpq.br/3740664626762609"
-							target="_new">
-								<div class="icon icon-download-alt"></div>
-								<div class="text">CV Lattes (in Portuguese)</div>
-						</a></li>
-					</ul>
-				</div>
-			</div>
+                        <li><a href="http://lattes.cnpq.br/3740664626762609"
+                               target="_new">
+                            <div class="icon icon-download-alt"></div>
+                            <div class="text">CV Lattes (in Portuguese)</div>
+                        </a></li>
 
-
-                <div class="social-icons">
-                    <ul>
-                        <li><a href="https://www.facebook.com/anderson.goncalvesuchoa" target="_new"><i class="icon-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/andersonguchoa" target="_new"><i class="icon-twitter"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/andersongnuchoa/" target="_new"><i class="icon-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
+
+            <div class="social-icons">
+                <ul>
+                    <li><a href="https://www.facebook.com/anderson.goncalvesuchoa"
+                           target="_new"><i class="icon-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/andersonguchoa" target="_new"><i
+                            class="icon-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/andersongnuchoa/"
+                           target="_new"><i class="icon-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
 
 
 <div id="main">
@@ -114,7 +135,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
 							 <p>A complete list of my publications with abstracts, doi link to publisher (when available), and author version eprints can be found below. You may also want to check out my profile at <a href="https://www.researchgate.net/profile/Anderson_Uchoa" target="_new">Research Gate</a>, <a href="https://scholar.google.com.br/citations?user=_bwg28kAAAAJ&hl=en" target="_new">Google Scholar</a>, <a href="https://dblp.uni-trier.de/search/publ?q=author:Anderson_G._Uch%C3%B4a:" target="_new">DBLP</a>, and <a href="https://lattes.cnpq.br/3740664626762609" target="_new">Lattes (in Portuguese)</a>. Feel free to contact me if you want to further discuss the ideas of any of the papers.</p>
-                                            <p><font color=red>(the list takes a few seconds to load)</font></p>   
+                                            <p><font color=red>(the list takes a few seconds to load)</font></p>
 					    </div>
                                                <script src="https://bibbase.org/show?bib=https%3A%2F%2Fanderson-uchoa.github.io%2Fpublications%2FUchoaPapers.bib&jsonp=1"></script>
                         
